Waiting for autohide of UI doesn't block the UI.

--- a/CounterStrikeAlerter/App.config
+++ b/CounterStrikeAlerter/App.config
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CounterStrikeAlerter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
+    <applicationSettings>
+        <CounterStrikeAlerter.Properties.Settings>
+            
+            <setting name="ServerAddress" serializeAs="String">
+                <value>193.104.68.49</value>
+            </setting>
+            <setting name="ServerPort" serializeAs="String">
+                <value>27040</value>
+            </setting>
+            
+          <!--<setting name="ServerAddress" serializeAs="String">
+            <value>192.168.0.147</value>
+          </setting>
+          <setting name="ServerPort" serializeAs="String">
+            <value>27015</value>
+          </setting>
+          -->
+        </CounterStrikeAlerter.Properties.Settings>
+    </applicationSettings>
 </configuration>
