Reimplemented querying server.

--- a/CSA.Model/CSA.Model.csproj
+++ b/CSA.Model/CSA.Model.csproj
@@ -42,10 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseModel.cs" />
+    <Compile Include="BaseServer.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="GoldSourceServer.cs" />
+    <Compile Include="SourceServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerType.cs" />
+    <Compile Include="Types.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
