--- a/CSA.ViewModel/CSA.ViewModel.csproj
+++ b/CSA.ViewModel/CSA.ViewModel.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Request.cs" />
+    <Compile Include="Response.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerMonitor.cs" />
