--- a/CounterStrikeAlerter/App.config
+++ b/CounterStrikeAlerter/App.config
@@ -10,21 +10,14 @@
     </startup>
     <applicationSettings>
         <CounterStrikeAlerter.Properties.Settings>
-            
-            <setting name="ServerAddress" serializeAs="String">
-                <value>193.104.68.49</value>
+            <setting name="ServerAddressAndPort" serializeAs="String">
+                <!-- === GoldSource server type === "STYLE.INDUNGI.RO # FATAL ERROR" 93.119.24.12:27015 -->
+                <!-- === Source server type ===     "Global Gaming Nis"              193.104.68.49:27040 -->
+                <value>193.104.68.49:27040</value>
             </setting>
-            <setting name="ServerPort" serializeAs="String">
-                <value>27040</value>
+            <setting name="BaloonHideInterval" serializeAs="String">
+                <value>20000</value>
             </setting>
-            
-          <!--<setting name="ServerAddress" serializeAs="String">
-            <value>192.168.0.147</value>
-          </setting>
-          <setting name="ServerPort" serializeAs="String">
-            <value>27015</value>
-          </setting>
-          -->
         </CounterStrikeAlerter.Properties.Settings>
     </applicationSettings>
 </configuration>
