Handling false read.

--- a/CounterStrikeAlerter/App.config
+++ b/CounterStrikeAlerter/App.config
@@ -4,20 +4,28 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="CounterStrikeAlerter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CounterStrikeAlerter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     <applicationSettings>
         <CounterStrikeAlerter.Properties.Settings>
-            <setting name="ServerAddressAndPort" serializeAs="String">
-                <!-- === GoldSource server type === "STYLE.INDUNGI.RO # FATAL ERROR" 93.119.24.12:27015 -->
-                <!-- === Source server type ===     "Global Gaming Nis"              193.104.68.49:27040 -->
-                <value>193.104.68.49:27040</value>
-            </setting>
             <setting name="BaloonHideInterval" serializeAs="String">
                 <value>20000</value>
             </setting>
+            <setting name="ServerAddressAndPort" serializeAs="String">
+                <value>193.104.68.49:27040</value>
+            </setting>
         </CounterStrikeAlerter.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <CounterStrikeAlerter.Properties.Settings>
+            <setting name="ServerReadInterval" serializeAs="String">
+                <value>00:00:05</value>
+            </setting>
+        </CounterStrikeAlerter.Properties.Settings>
+    </userSettings>
 </configuration>
