--- a/CounterStrikeAlerter/Properties/Settings.settings
+++ b/CounterStrikeAlerter/Properties/Settings.settings
@@ -2,11 +2,14 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CounterStrikeAlerter.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="ServerAddressAndPort" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">93.119.24.12:27015</Value>
-    </Setting>
     <Setting Name="BaloonHideInterval" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">20000</Value>
+    </Setting>
+    <Setting Name="ServerAddressAndPort" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">193.104.68.49:27040</Value>
+    </Setting>
+    <Setting Name="ServerReadInterval" Type="System.TimeSpan" Scope="User">
+      <Value Profile="(Default)">00:00:05</Value>
     </Setting>
   </Settings>
 </SettingsFile>
