--- a/CounterStrikeAlerter/CounterStrikeAlerter.csproj
+++ b/CounterStrikeAlerter/CounterStrikeAlerter.csproj
@@ -76,6 +76,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MainViewModel.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="TrayIcon.cs" />
     <Page Include="MainWindow.xaml">
