--- a/CSA.ViewModel/CSA.ViewModel.csproj
+++ b/CSA.ViewModel/CSA.ViewModel.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseViewModel.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="Response.cs" />
     <Compile Include="Server.cs" />
