--- a/CSA.ViewModel/CSA.ViewModel.csproj
+++ b/CSA.ViewModel/CSA.ViewModel.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Request.cs" />
     <Compile Include="Response.cs" />
+    <Compile Include="SendMail.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerMonitor.cs" />
