--- a/CounterStrikeAlerter/CounterStrikeAlerter.csproj
+++ b/CounterStrikeAlerter/CounterStrikeAlerter.csproj
@@ -76,9 +76,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="GmailSettings.xaml.cs">
+      <DependentUpon>GmailSettings.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainViewModel.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="TrayIcon.cs" />
+    <Page Include="GmailSettings.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
