Send mail improvements.

--- a/CounterStrikeAlerter/App.config
+++ b/CounterStrikeAlerter/App.config
@@ -16,6 +16,10 @@
             <setting name="BaloonHideInterval" serializeAs="String">
                 <value>20000</value>
             </setting>
+          <!-- Cookies revenge 192.168.0.106:27015-->
+          <!-- Brezna Arena 192.168.0.147:27015-->
+          <!-- Global gaming Nis 193.104.68.49:27040-->
+          <!-- Balkanika  176.57.188.25:27025 -->
             <setting name="ServerAddressAndPort" serializeAs="String">
                 <value> 		193.104.68.49:27040</value>
             </setting>
