--- a/CSA.Reporter/CSA.Reporter.csproj
+++ b/CSA.Reporter/CSA.Reporter.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendToAddress.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
