--- a/CSA.Reporter/App.config
+++ b/CSA.Reporter/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="CSA.Reporter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CSA.Reporter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
@@ -15,4 +18,11 @@
             </setting>
         </CSA.Reporter.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <CSA.Reporter.Properties.Settings>
+            <setting name="CounterStrikeServerAndPort" serializeAs="String">
+                <value>193.104.68.49:27040</value>
+            </setting>
+        </CSA.Reporter.Properties.Settings>
+    </userSettings>
 </configuration>
