--- a/CSA.Reporter/Properties/Settings.settings
+++ b/CSA.Reporter/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="QueryServerSeconds" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">3</Value>
     </Setting>
+    <Setting Name="CounterStrikeServerAndPort" Type="System.String" Scope="User">
+      <Value Profile="(Default)">193.104.68.49:27040</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
