--- a/CSA.Reporter/App.config
+++ b/CSA.Reporter/App.config
@@ -23,6 +23,9 @@
             <setting name="CounterStrikeServerAndPort" serializeAs="String">
                 <value>192.168.10.12:27015</value>
             </setting>
+            <setting name="PlayersResetedScoreRateMin" serializeAs="String">
+                <value>25</value>
+            </setting>
         </CSA.Reporter.Properties.Settings>
     </userSettings>
 </configuration>
