Added default value for property SendToAddresses of GmailSettings.

--- a/CSA.Reporter/GmailSettings.config
+++ b/CSA.Reporter/GmailSettings.config
@@ -3,5 +3,5 @@
   <configSections>
     <section name="GmailSettings" type="CSA.Reporter.GmailSettings, CSA.Reporter, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" allowLocation="true" allowDefinition="Everywhere" allowExeDefinition="MachineToApplication" overrideModeDefault="Allow" restartOnExternalChanges="true" requirePermission="true" />
   </configSections>
-  <GmailSettings GmailUser="Replace Gmail user here" GmailEncryptedPassword="Replace Gmail encrypted password here" />
+  <GmailSettings GmailUser="Replace Gmail user here" GmailEncryptedPassword="Replace Gmail encrypted password here" SendToAddresses="Replace receivers addresses here separated by semicolon. Eg. user1@domain1.com;user2@domain2.com" />
 </configuration>
