--- a/CSA.Common/CSA.Common.csproj
+++ b/CSA.Common/CSA.Common.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="DataProtectionApiWrapper.cs" />
     <Compile Include="Logger.cs" />
-    <Compile Include="RegistrySettings.cs" />
+    <Compile Include="GmailRegistrySettings.cs" />
     <Compile Include="SendMail.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
